[package]
name = "asteroid-game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
specs = "0.20.0"
specs-derive = "0.4.1"
vector2d = "2.2.0"

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
features = ["image", "ttf"]
